custom scrollbar, fix navlink toggle, and footer margin

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
+    @apply rounded;
+  }
+}
